parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> print_stmt
Rule 5     statement -> input_stmt
Rule 6     statement -> assign_stmt
Rule 7     statement -> if_stmt
Rule 8     statement -> while_stmt
Rule 9     statement -> func_def
Rule 10    statement -> class_def
Rule 11    statement -> data_structure_stmt
Rule 12    print_stmt -> ID expr
Rule 13    input_stmt -> ID ASIG GETS
Rule 14    assign_stmt -> ID ASIG expr
Rule 15    assign_stmt -> ID MASIG expr
Rule 16    expr -> expr PLUS expr
Rule 17    expr -> expr MINUS expr
Rule 18    expr -> expr TIMES expr
Rule 19    expr -> expr DIVIDE expr
Rule 20    expr -> expr MOD expr
Rule 21    expr -> expr EXP expr
Rule 22    expr -> expr IGUAL expr
Rule 23    expr -> expr DIFERENTE expr
Rule 24    expr -> expr MAYORQ expr
Rule 25    expr -> expr MENORQ expr
Rule 26    expr -> expr MAYORIG expr
Rule 27    expr -> expr MENORIG expr
Rule 28    expr -> expr AND expr
Rule 29    expr -> expr OR expr
Rule 30    expr -> LPAR expr RPAR
Rule 31    expr -> NOT expr
Rule 32    expr -> NUMBER
Rule 33    expr -> STRING
Rule 34    expr -> TRUE
Rule 35    expr -> FALSE
Rule 36    expr -> NIL
Rule 37    expr -> ID
Rule 38    statement_list -> statement_list NEWLINE
Rule 39    if_stmt -> IF expr NEWLINE statement_list END
Rule 40    if_stmt -> IF expr THEN statement_list END
Rule 41    if_stmt -> IF expr statement_list END
Rule 42    while_stmt -> WHILE expr NEWLINE statement_list END
Rule 43    while_stmt -> WHILE expr DO statement_list END
Rule 44    while_stmt -> WHILE expr statement_list END
Rule 45    statement -> NEWLINE statement
Rule 46    data_structure_stmt -> ID ASIG LCOR expr_list RCOR
Rule 47    expr_list -> expr_list COMA expr
Rule 48    expr_list -> expr
Rule 49    func_def -> DEF ID param_list_opt NEWLINE statement_list END
Rule 50    param_list_opt -> <empty>
Rule 51    param_list_opt -> LPAR param_list RPAR
Rule 52    param_list -> param_list COMA ID
Rule 53    param_list -> ID
Rule 54    class_def -> CLASS ID NEWLINE class_body END
Rule 55    class_body -> statement_list

Terminals, with rules where they appear

AND                  : 28
ASIG                 : 13 14 46
CLASS                : 54
COMA                 : 47 52
DEF                  : 49
DIFERENTE            : 23
DIVIDE               : 19
DO                   : 43
END                  : 39 40 41 42 43 44 49 54
EXP                  : 21
FALSE                : 35
GETS                 : 13
ID                   : 12 13 14 15 37 46 49 52 53 54
IF                   : 39 40 41
IGUAL                : 22
LCOR                 : 46
LPAR                 : 30 51
MASIG                : 15
MAYORIG              : 26
MAYORQ               : 24
MENORIG              : 27
MENORQ               : 25
MINUS                : 17
MOD                  : 20
NEWLINE              : 38 39 42 45 49 54
NIL                  : 36
NOT                  : 31
NUMBER               : 32
OR                   : 29
PLUS                 : 16
RCOR                 : 46
RPAR                 : 30 51
STRING               : 33
THEN                 : 40
TIMES                : 18
TRUE                 : 34
WHILE                : 42 43 44
error                : 

Nonterminals, with rules where they appear

assign_stmt          : 6
class_body           : 54
class_def            : 10
data_structure_stmt  : 11
expr                 : 12 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 39 40 41 42 43 44 47 48
expr_list            : 46 47
func_def             : 9
if_stmt              : 7
input_stmt           : 5
param_list           : 51 52
param_list_opt       : 49
print_stmt           : 4
program              : 0
statement            : 2 3 45
statement_list       : 1 2 38 39 40 41 42 43 44 49 55
while_stmt           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (38) statement_list -> . statement_list NEWLINE
    (4) statement -> . print_stmt
    (5) statement -> . input_stmt
    (6) statement -> . assign_stmt
    (7) statement -> . if_stmt
    (8) statement -> . while_stmt
    (9) statement -> . func_def
    (10) statement -> . class_def
    (11) statement -> . data_structure_stmt
    (45) statement -> . NEWLINE statement
    (12) print_stmt -> . ID expr
    (13) input_stmt -> . ID ASIG GETS
    (14) assign_stmt -> . ID ASIG expr
    (15) assign_stmt -> . ID MASIG expr
    (39) if_stmt -> . IF expr NEWLINE statement_list END
    (40) if_stmt -> . IF expr THEN statement_list END
    (41) if_stmt -> . IF expr statement_list END
    (42) while_stmt -> . WHILE expr NEWLINE statement_list END
    (43) while_stmt -> . WHILE expr DO statement_list END
    (44) while_stmt -> . WHILE expr statement_list END
    (49) func_def -> . DEF ID param_list_opt NEWLINE statement_list END
    (54) class_def -> . CLASS ID NEWLINE class_body END
    (46) data_structure_stmt -> . ID ASIG LCOR expr_list RCOR

    NEWLINE         shift and go to state 4
    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    DEF             shift and go to state 16
    CLASS           shift and go to state 17

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    print_stmt                     shift and go to state 5
    input_stmt                     shift and go to state 6
    assign_stmt                    shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    func_def                       shift and go to state 10
    class_def                      shift and go to state 11
    data_structure_stmt            shift and go to state 12

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (38) statement_list -> statement_list . NEWLINE
    (4) statement -> . print_stmt
    (5) statement -> . input_stmt
    (6) statement -> . assign_stmt
    (7) statement -> . if_stmt
    (8) statement -> . while_stmt
    (9) statement -> . func_def
    (10) statement -> . class_def
    (11) statement -> . data_structure_stmt
    (45) statement -> . NEWLINE statement
    (12) print_stmt -> . ID expr
    (13) input_stmt -> . ID ASIG GETS
    (14) assign_stmt -> . ID ASIG expr
    (15) assign_stmt -> . ID MASIG expr
    (39) if_stmt -> . IF expr NEWLINE statement_list END
    (40) if_stmt -> . IF expr THEN statement_list END
    (41) if_stmt -> . IF expr statement_list END
    (42) while_stmt -> . WHILE expr NEWLINE statement_list END
    (43) while_stmt -> . WHILE expr DO statement_list END
    (44) while_stmt -> . WHILE expr statement_list END
    (49) func_def -> . DEF ID param_list_opt NEWLINE statement_list END
    (54) class_def -> . CLASS ID NEWLINE class_body END
    (46) data_structure_stmt -> . ID ASIG LCOR expr_list RCOR

    $end            reduce using rule 1 (program -> statement_list .)
    NEWLINE         shift and go to state 19
    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    DEF             shift and go to state 16
    CLASS           shift and go to state 17

    statement                      shift and go to state 18
    print_stmt                     shift and go to state 5
    input_stmt                     shift and go to state 6
    assign_stmt                    shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    func_def                       shift and go to state 10
    class_def                      shift and go to state 11
    data_structure_stmt            shift and go to state 12

state 3

    (3) statement_list -> statement .

    NEWLINE         reduce using rule 3 (statement_list -> statement .)
    ID              reduce using rule 3 (statement_list -> statement .)
    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    DEF             reduce using rule 3 (statement_list -> statement .)
    CLASS           reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    END             reduce using rule 3 (statement_list -> statement .)


state 4

    (45) statement -> NEWLINE . statement
    (4) statement -> . print_stmt
    (5) statement -> . input_stmt
    (6) statement -> . assign_stmt
    (7) statement -> . if_stmt
    (8) statement -> . while_stmt
    (9) statement -> . func_def
    (10) statement -> . class_def
    (11) statement -> . data_structure_stmt
    (45) statement -> . NEWLINE statement
    (12) print_stmt -> . ID expr
    (13) input_stmt -> . ID ASIG GETS
    (14) assign_stmt -> . ID ASIG expr
    (15) assign_stmt -> . ID MASIG expr
    (39) if_stmt -> . IF expr NEWLINE statement_list END
    (40) if_stmt -> . IF expr THEN statement_list END
    (41) if_stmt -> . IF expr statement_list END
    (42) while_stmt -> . WHILE expr NEWLINE statement_list END
    (43) while_stmt -> . WHILE expr DO statement_list END
    (44) while_stmt -> . WHILE expr statement_list END
    (49) func_def -> . DEF ID param_list_opt NEWLINE statement_list END
    (54) class_def -> . CLASS ID NEWLINE class_body END
    (46) data_structure_stmt -> . ID ASIG LCOR expr_list RCOR

    NEWLINE         shift and go to state 4
    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    DEF             shift and go to state 16
    CLASS           shift and go to state 17

    statement                      shift and go to state 20
    print_stmt                     shift and go to state 5
    input_stmt                     shift and go to state 6
    assign_stmt                    shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    func_def                       shift and go to state 10
    class_def                      shift and go to state 11
    data_structure_stmt            shift and go to state 12

state 5

    (4) statement -> print_stmt .

    NEWLINE         reduce using rule 4 (statement -> print_stmt .)
    ID              reduce using rule 4 (statement -> print_stmt .)
    IF              reduce using rule 4 (statement -> print_stmt .)
    WHILE           reduce using rule 4 (statement -> print_stmt .)
    DEF             reduce using rule 4 (statement -> print_stmt .)
    CLASS           reduce using rule 4 (statement -> print_stmt .)
    $end            reduce using rule 4 (statement -> print_stmt .)
    END             reduce using rule 4 (statement -> print_stmt .)


state 6

    (5) statement -> input_stmt .

    NEWLINE         reduce using rule 5 (statement -> input_stmt .)
    ID              reduce using rule 5 (statement -> input_stmt .)
    IF              reduce using rule 5 (statement -> input_stmt .)
    WHILE           reduce using rule 5 (statement -> input_stmt .)
    DEF             reduce using rule 5 (statement -> input_stmt .)
    CLASS           reduce using rule 5 (statement -> input_stmt .)
    $end            reduce using rule 5 (statement -> input_stmt .)
    END             reduce using rule 5 (statement -> input_stmt .)


state 7

    (6) statement -> assign_stmt .

    NEWLINE         reduce using rule 6 (statement -> assign_stmt .)
    ID              reduce using rule 6 (statement -> assign_stmt .)
    IF              reduce using rule 6 (statement -> assign_stmt .)
    WHILE           reduce using rule 6 (statement -> assign_stmt .)
    DEF             reduce using rule 6 (statement -> assign_stmt .)
    CLASS           reduce using rule 6 (statement -> assign_stmt .)
    $end            reduce using rule 6 (statement -> assign_stmt .)
    END             reduce using rule 6 (statement -> assign_stmt .)


state 8

    (7) statement -> if_stmt .

    NEWLINE         reduce using rule 7 (statement -> if_stmt .)
    ID              reduce using rule 7 (statement -> if_stmt .)
    IF              reduce using rule 7 (statement -> if_stmt .)
    WHILE           reduce using rule 7 (statement -> if_stmt .)
    DEF             reduce using rule 7 (statement -> if_stmt .)
    CLASS           reduce using rule 7 (statement -> if_stmt .)
    $end            reduce using rule 7 (statement -> if_stmt .)
    END             reduce using rule 7 (statement -> if_stmt .)


state 9

    (8) statement -> while_stmt .

    NEWLINE         reduce using rule 8 (statement -> while_stmt .)
    ID              reduce using rule 8 (statement -> while_stmt .)
    IF              reduce using rule 8 (statement -> while_stmt .)
    WHILE           reduce using rule 8 (statement -> while_stmt .)
    DEF             reduce using rule 8 (statement -> while_stmt .)
    CLASS           reduce using rule 8 (statement -> while_stmt .)
    $end            reduce using rule 8 (statement -> while_stmt .)
    END             reduce using rule 8 (statement -> while_stmt .)


state 10

    (9) statement -> func_def .

    NEWLINE         reduce using rule 9 (statement -> func_def .)
    ID              reduce using rule 9 (statement -> func_def .)
    IF              reduce using rule 9 (statement -> func_def .)
    WHILE           reduce using rule 9 (statement -> func_def .)
    DEF             reduce using rule 9 (statement -> func_def .)
    CLASS           reduce using rule 9 (statement -> func_def .)
    $end            reduce using rule 9 (statement -> func_def .)
    END             reduce using rule 9 (statement -> func_def .)


state 11

    (10) statement -> class_def .

    NEWLINE         reduce using rule 10 (statement -> class_def .)
    ID              reduce using rule 10 (statement -> class_def .)
    IF              reduce using rule 10 (statement -> class_def .)
    WHILE           reduce using rule 10 (statement -> class_def .)
    DEF             reduce using rule 10 (statement -> class_def .)
    CLASS           reduce using rule 10 (statement -> class_def .)
    $end            reduce using rule 10 (statement -> class_def .)
    END             reduce using rule 10 (statement -> class_def .)


state 12

    (11) statement -> data_structure_stmt .

    NEWLINE         reduce using rule 11 (statement -> data_structure_stmt .)
    ID              reduce using rule 11 (statement -> data_structure_stmt .)
    IF              reduce using rule 11 (statement -> data_structure_stmt .)
    WHILE           reduce using rule 11 (statement -> data_structure_stmt .)
    DEF             reduce using rule 11 (statement -> data_structure_stmt .)
    CLASS           reduce using rule 11 (statement -> data_structure_stmt .)
    $end            reduce using rule 11 (statement -> data_structure_stmt .)
    END             reduce using rule 11 (statement -> data_structure_stmt .)


state 13

    (12) print_stmt -> ID . expr
    (13) input_stmt -> ID . ASIG GETS
    (14) assign_stmt -> ID . ASIG expr
    (15) assign_stmt -> ID . MASIG expr
    (46) data_structure_stmt -> ID . ASIG LCOR expr_list RCOR
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr TIMES expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr EXP expr
    (22) expr -> . expr IGUAL expr
    (23) expr -> . expr DIFERENTE expr
    (24) expr -> . expr MAYORQ expr
    (25) expr -> . expr MENORQ expr
    (26) expr -> . expr MAYORIG expr
    (27) expr -> . expr MENORIG expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . LPAR expr RPAR
    (31) expr -> . NOT expr
    (32) expr -> . NUMBER
    (33) expr -> . STRING
    (34) expr -> . TRUE
    (35) expr -> . FALSE
    (36) expr -> . NIL
    (37) expr -> . ID

    ASIG            shift and go to state 23
    MASIG           shift and go to state 24
    LPAR            shift and go to state 25
    NOT             shift and go to state 26
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NIL             shift and go to state 31
    ID              shift and go to state 21

    expr                           shift and go to state 22

state 14

    (39) if_stmt -> IF . expr NEWLINE statement_list END
    (40) if_stmt -> IF . expr THEN statement_list END
    (41) if_stmt -> IF . expr statement_list END
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr TIMES expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr EXP expr
    (22) expr -> . expr IGUAL expr
    (23) expr -> . expr DIFERENTE expr
    (24) expr -> . expr MAYORQ expr
    (25) expr -> . expr MENORQ expr
    (26) expr -> . expr MAYORIG expr
    (27) expr -> . expr MENORIG expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . LPAR expr RPAR
    (31) expr -> . NOT expr
    (32) expr -> . NUMBER
    (33) expr -> . STRING
    (34) expr -> . TRUE
    (35) expr -> . FALSE
    (36) expr -> . NIL
    (37) expr -> . ID

    LPAR            shift and go to state 25
    NOT             shift and go to state 26
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NIL             shift and go to state 31
    ID              shift and go to state 21

    expr                           shift and go to state 32

state 15

    (42) while_stmt -> WHILE . expr NEWLINE statement_list END
    (43) while_stmt -> WHILE . expr DO statement_list END
    (44) while_stmt -> WHILE . expr statement_list END
    (16) expr -> . expr PLUS expr
    (17) expr -> . expr MINUS expr
    (18) expr -> . expr TIMES expr
    (19) expr -> . expr DIVIDE expr
    (20) expr -> . expr MOD expr
    (21) expr -> . expr EXP expr
    (22) expr -> . expr IGUAL expr
    (23) expr -> . expr DIFERENTE expr
    (24) expr -> . expr MAYORQ expr
    (25) expr -> . expr MENORQ expr
    (26) expr -> . expr MAYORIG expr
    (27) expr -> . expr MENORIG expr
    (28) expr -> . expr AND expr
    (29) expr -> . expr OR expr
    (30) expr -> . LPAR expr RPAR
    (31) expr -> . NOT expr
    (32) expr -> . NUMBER
    (33) expr -> . STRING
    (34) expr -> . TRUE
    (35) expr -> . FALSE
    (36) expr -> . NIL
    (37) expr -> . ID

    LPAR            shift and go to state 25
    NOT             shift and go to state 26
    NUMBER          shift and go to state 27
    STRING          shift and go to state 28
    TRUE            shift and go to state 29
    FALSE           shift and go to state 30
    NIL             shift and go to state 31
    ID              shift and go to state 21

    expr                           shift and go to state 33

state 16

    (49) func_def -> DEF . ID param_list_opt NEWLINE statement_list END

    ID              shift and go to state 34


state 17

    (54) class_def -> CLASS . ID NEWLINE class_body END

    ID              shift and go to state 35


state 18

    (2) statement_list -> statement_list statement .

    NEWLINE         reduce using rule 2 (statement_list -> statement_list statement .)
    ID              reduce using rule 2 (statement_list -> statement_list statement .)
    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    DEF             reduce using rule 2 (statement_list -> statement_list statement .)
    CLASS           reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    END             reduce using rule 2 (statement_list -> statement_list statement .)


state 19

    (38) statement_list -> statement_list NEWLINE .
    (45) statement -> NEWLINE . statement
    (4) statement -> . print_stmt
    (5) statement -> . input_stmt
    (6) statement -> . assign_stmt
    (7) statement -> . if_stmt
    (8) statement -> . while_stmt
    (9) statement -> . func_def
    (10) statement -> . class_def
    (11) statement -> . data_structure_stmt
    (45) statement -> . NEWLINE statement
    (12) print_stmt -> . ID expr
    (13) input_stmt -> . ID ASIG GETS
    (14) assign_stmt -> . ID ASIG expr
    (15) assign_stmt -> . ID MASIG expr
    (39) if_stmt -> . IF expr NEWLINE statement_list END
    (40) if_stmt -> . IF expr THEN statement_list END
    (41) if_stmt -> . IF expr statement_list END
    (42) while_stmt -> . WHILE expr NEWLINE statement_list END
    (43) while_stmt -> . WHILE expr DO statement_list END
    (44) while_stmt -> . WHILE expr statement_list END
    (49) func_def -> . DEF ID param_list_opt NEWLINE statement_list END
    (54) class_def -> . CLASS ID NEWLINE class_body END
    (46) data_structure_stmt -> . ID ASIG LCOR expr_list RCOR

  ! shift/reduce conflict for NEWLINE resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DEF resolved as shift
  ! shift/reduce conflict for CLASS resolved as shift
    $end            reduce using rule 38 (statement_list -> statement_list NEWLINE .)
    END             reduce using rule 38 (statement_list -> statement_list NEWLINE .)
    NEWLINE         shift and go to state 4
    ID              shift and go to state 13
    IF              shift and go to state 14
    WHILE           shift and go to state 15
    DEF             shift and go to state 16
    CLASS           shift and go to state 17

  ! NEWLINE         [ reduce using rule 38 (statement_list -> statement_list NEWLINE .) ]
  ! ID              [ reduce using rule 38 (statement_list -> statement_list NEWLINE .) ]
  ! IF              [ reduce using rule 38 (statement_list -> statement_list NEWLINE .) ]
  ! WHILE           [ reduce using rule 38 (statement_list -> statement_list NEWLINE .) ]
  ! DEF             [ reduce using rule 38 (statement_list -> statement_list NEWLINE .) ]
  ! CLASS           [ reduce using rule 38 (statement_list -> statement_list NEWLINE .) ]

    statement                      shift and go to state 20
    print_stmt                     shift and go to state 5
    input_stmt                     shift and go to state 6
    assign_stmt                    shift and go to state 7
    if_stmt                        shift and go to state 8
    while_stmt                     shift and go to state 9
    func_def                       shift and go to state 10
    class_def                      shift and go to state 11
    data_structure_stmt            shift and go to state 12

state 20

    (45) statement -> NEWLINE statement .

    NEWLINE         reduce using rule 45 (statement -> NEWLINE statement .)
    ID              reduce using rule 45 (statement -> NEWLINE statement .)
    IF              reduce using rule 45 (statement -> NEWLINE statement .)
    WHILE           reduce using rule 45 (statement -> NEWLINE statement .)
    DEF             reduce using rule 45 (statement -> NEWLINE statement .)
    CLASS           reduce using rule 45 (statement -> NEWLINE statement .)
    $end            reduce using rule 45 (statement -> NEWLINE statement .)
    END             reduce using rule 45 (statement -> NEWLINE statement .)


state 21

    (37) expr -> ID .

    PLUS            reduce using rule 37 (expr -> ID .)
    MINUS           reduce using rule 37 (expr -> ID .)
    TIMES           reduce using rule 37 (expr -> ID .)
    DIVIDE          reduce using rule 37 (expr -> ID .)
    MOD             reduce using rule 37 (expr -> ID .)
    EXP             reduce using rule 37 (expr -> ID .)
    IGUAL           reduce using rule 37 (expr -> ID .)
    DIFERENTE       reduce using rule 37 (expr -> ID .)
    MAYORQ          reduce using rule 37 (expr -> ID .)
    MENORQ          reduce using rule 37 (expr -> ID .)
    MAYORIG         reduce using rule 37 (expr -> ID .)
    MENORIG         reduce using rule 37 (expr -> ID .)
    AND             reduce using rule 37 (expr -> ID .)
    OR              reduce using rule 37 (expr -> ID .)
    NEWLINE         reduce using rule 37 (expr -> ID .)
    ID              reduce using rule 37 (expr -> ID .)
    IF              reduce using rule 37 (expr -> ID .)
    WHILE           reduce using rule 37 (expr -> ID .)
    DEF             reduce using rule 37 (expr -> ID .)
    CLASS           reduce using rule 37 (expr -> ID .)
    $end            reduce using rule 37 (expr -> ID .)
    END             reduce using rule 37 (expr -> ID .)
    THEN            reduce using rule 37 (expr -> ID .)
    DO              reduce using rule 37 (expr -> ID .)
    RPAR            reduce using rule 37 (expr -> ID .)
    RCOR            reduce using rule 37 (expr -> ID .)
    COMA            reduce using rule 37 (expr -> ID .)


state 22

    (12) print_stmt -> ID expr .
    (16) expr -> expr . PLUS expr
    (17) expr -> expr . MINUS expr
    (18) expr -> expr . TIMES expr
    (19) expr -> expr . DIVIDE expr
    (20) expr -> expr . MOD expr
    (21) expr -> expr . EXP expr
    (22) expr -> expr . IGUAL expr
    (23) expr -> expr . DIFERENTE expr
    (24) expr -> expr . MAYORQ expr
    (25) expr -> expr . MENORQ expr
    (26) expr -> expr . MAYORIG expr
    (27) expr -> expr . MENORIG expr
    (28) expr -> expr . AND expr
    (29) expr -> expr . OR expr

    NEWLINE         reduce using rule 12 (print_stmt -> ID expr .)
    ID              reduce using rule 12 (print_stmt -> ID expr .)
    IF              reduce using rule 12 (print_stmt -> ID expr .)
    WHILE           reduce using rule 12 (print_stmt -> ID expr .)
    DEF             reduce using rule 12 (print_stmt -> ID expr .)
    CLASS           reduce using rule 12 (print_stmt -> ID expr .)
    $end            reduce using rule 12 (print_stmt -> ID expr .)
    END             reduce using rule 12 (print_stmt -> ID expr .)
    PLUS            shift and go to state 36
    MINUS           shift and go to state 37
    TIMES           shift and go to state 38
    DIVIDE          shift and go to state 39
    MOD             shift and go to state 40
    EXP             shift and go to state 41
    IGUAL           shift and go to state 42
    DIFERENTE       shift and go to state 43
    MAYORQ          shift and go to state 44
    MENORQ          shift and go to state 45
    MAYORIG         shift and go to state 46
    MENORIG         shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49


state 23
